--- a/Saritasa.BAL/Saritasa.BAL.csproj
+++ b/Saritasa.BAL/Saritasa.BAL.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StorageFile\" />
+  </ItemGroup>
+
 </Project>
