--- a/BackendApi/Saritasa.BackendApi.csproj
+++ b/BackendApi/Saritasa.BackendApi.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
+
 </Project>
